package org.ldv.sahazawear.model.entity

// ⚠️ Classe associative - Annotations JPA à ajouter plus tard
class LignePanier(
    var id: Long?,
    var quantite: Int
)